--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
+:root{
+--blue-color: #0d5ef4;
+--blue-color-hover: rgb(57, 108, 202);
+--font-color: aqua;
+}
+
 body{
 margin: 0;
 padding: 0;
@@ -22,7 +28,11 @@ padding: 20px;
 margin: 0 auto;
 border-radius: 4px;
 }
-
+.todo-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .form-container{
 background: #222;
 display: flex;
@@ -32,20 +42,35 @@ border-radius: 4px;
 .todo-form{
 position: relative;
 width: 100%;
+display: flex;
+justify-content: space-between;
 }
+.todo-button{
+background-color: var(--blue-color);
+border: none;
+}
+.todo-button:hover{
+    cursor: pointer;
+}
+.todo-form .todo-button span{
 
+}
 .form{
-width: calc(100% - 55px);
+width: auto;
 height: 30px;
 margin: 10px;
-border: 2px solid white;
+border: none;
 transition: width 0.3s ease-out;
 position: relative;
+background: transparent;
+color: #f7f5f3;
+font-size: 16px;
+flex-grow: 1;
 }
 .form:focus{
     outline: none;
 }
-todo-header {
+.todo-header {
 display: inline-block;
 margin-top: 5px;
 line-height: 0.5em;
@@ -58,28 +83,20 @@ border-radius: 4px;
 height: auto;
 margin-bottom: 40px;
 }
-
-.todo-form span{
-position: absolute;
-right: 30px;
-width: 70px;
-height: 30px;
-margin: 10px;
-}
-.todo-form .todo-btn, .clear-localstorage{
+.todo-form .todo-btn{
 width: 73px;
 height: 36px;
 right: -39%;
 position: relative;
-background: cornflowerblue;
+background: var(--blue-color);
 border: none;
 padding: 0;
 color: white;
 }
 
-.todo-form .todo-btn, .clear-localstorage:hover{
+.todo-form .todo-btn:hover{
 cursor: pointer;
-background: rgb(57, 108, 202);
+background: var(--blue-color-hover);
 }
 .todo-list{
 margin: 0;
@@ -88,14 +105,26 @@ padding: 0;
 display: grid;
 place-items: center;
 }
+.material-icons {
+ color: rgba(255, 255, 255, 1); 
+}
+.todo-holder{
+    color: white;
+}
 .clear-localstorage{
 position: fixed;
 bottom: 10px;
 right: 10px;
 height: 45px;
-width: 60px;
+width: 75px;
 border-radius: 5%;
-background: #0d5ef4;
+background: var(--blue-color);
+border: none;
+color: white;
+}
+.clear-localstorage:hover{
+    content: 'Hello';
+    background: #e72f2f;
 }
 .todo-items-wrapper .todo-list .todo-item{
 border-bottom: #18191a;
@@ -108,14 +137,48 @@ width: 100%;
 transition:background .2s cubic-bezier(.46,.03,.52,.96);
 }
 
+#modal-activated{
+    filter: brightness(35%);
+    pointer-events: none;
+}
+.modal-box{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 245px;
+    height: 170px;
+    background: #fff;
+    border-radius: 4px;
+}
+.modal-text{
+     padding: 5px 10px 0 10px;
+}
+#modal-buttons{
+    display: flex;
+    justify-content: space-evenly;
+}
+.modal-button{
+    width: 80px;
+    height: 40px;
+    background: #0d5ef4;
+    color: white;
+    border: none;
+    border-radius: 2px;
+    margin-top: 35px;
+}
+.modal-button:hover{
+    background: #e72f2f;
+}
 .todo-items-wrapper .todo-list .todo-item:nth-child(2n){
     background: #282827d4;
+    border-left-style: solid;
     }
 .todo-items-wrapper .todo-list .todo-item:hover{
     background: rgb(234 14 53 / 92%);
     cursor: pointer;
 }
-
 .test{
     height: 200px;
     width: 300px;
